// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsStopReasonsOverview > renders correctly 1`] = `
<settings-entities-overview-stub
  arecolsloading="false"
  arerowsclickable="true"
  caneditgroups="true"
  customviews=""
  entityname="comment"
  filterconfiguration="[object Map]"
  groupdeletefn="[Function]"
  groupfields="name,color,local,translations,tags"
  groups="[object Object],[object Object]"
  hasgroupview="true"
  hideresetbtn="false"
  isdeletinggroupinprogress="false"
  items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  languagetextentity="commentGroup"
  loading="false"
  menuitems="[object Object]"
  namefield="primaryName"
  navigatetoeditroute="true"
  openpanelsonfilter="true"
  overviewheader="Stop reasons"
  primarybtntext="Reason"
  saveactionname="saveCommentGroup"
  secondarybtntext="Group"
  showdragicon="true"
  showemptygroups="true"
  showglobalgroupsicon="true"
  showgroupitemscount="true"
  statuskey="enabled"
  tableheaders="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  togglebtnvalue="list"
  usebackendfiltering="false"
/>
`;

exports[`SettingsStopReasonsOverview > renders correctly when userHasGlobalGroupsIcon is false 1`] = `
<settings-entities-overview-stub
  arecolsloading="false"
  arerowsclickable="true"
  caneditgroups="true"
  customviews=""
  entityname="comment"
  filterconfiguration="[object Map]"
  groupdeletefn="[Function]"
  groupfields="name,color,local,translations,tags"
  groups="[object Object],[object Object]"
  hasgroupview="true"
  hideresetbtn="false"
  isdeletinggroupinprogress="false"
  items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  languagetextentity="commentGroup"
  loading="false"
  menuitems="[object Object]"
  namefield="primaryName"
  navigatetoeditroute="true"
  openpanelsonfilter="true"
  overviewheader="Stop reasons"
  primarybtntext="Reason"
  saveactionname="saveCommentGroup"
  secondarybtntext="Group"
  showdragicon="true"
  showemptygroups="true"
  showglobalgroupsicon="false"
  showgroupitemscount="true"
  statuskey="enabled"
  tableheaders="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  togglebtnvalue="list"
  usebackendfiltering="false"
/>
`;

exports[`SettingsStopReasonsOverview > renders correctly with import/export option 1`] = `
<settings-entities-overview-stub
  arecolsloading="false"
  arerowsclickable="true"
  caneditgroups="true"
  customviews=""
  entityname="comment"
  filterconfiguration="[object Map]"
  groupdeletefn="[Function]"
  groupfields="name,color,local,translations,tags"
  groups="[object Object],[object Object]"
  hasgroupview="true"
  hideresetbtn="false"
  isdeletinggroupinprogress="false"
  items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  languagetextentity="commentGroup"
  loading="false"
  menuitems="[object Object],[object Object]"
  namefield="primaryName"
  navigatetoeditroute="true"
  openpanelsonfilter="true"
  overviewheader="Stop reasons"
  primarybtntext="Reason"
  saveactionname="saveCommentGroup"
  secondarybtntext="Group"
  showdragicon="true"
  showemptygroups="true"
  showglobalgroupsicon="true"
  showgroupitemscount="true"
  statuskey="enabled"
  tableheaders="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  togglebtnvalue="list"
  usebackendfiltering="false"
/>
`;
